After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745335 - Can't close non-csd windows (such as gnome-terminal) with touch
Can't close non-csd windows (such as gnome-terminal) with touch
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
touch
: 732017 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-02-28 16:00 UTC by Elad Alfassa
Modified: 2015-03-16 15:51 UTC
See Also:
GNOME target: 3.16
GNOME version: ---


Attachments
core: Unset all input events on the GDK connection (1.23 KB, patch)
2015-03-12 13:28 UTC, Carlos Garnacho
none Details | Review

Description Elad Alfassa 2015-02-28 16:00:41 UTC
When touching the x button on non-CSD windows, I can see the button highlighting (as if I hovered it with the mouse), but the window isn't actually closed. 

Running gnome-shell 3.15.90.
Comment 1 Matthias Clasen 2015-02-28 19:40:20 UTC
I don't think any touch interaction on non-csd titlebars works currently. I can't drag windows either.
Comment 2 Matthias Clasen 2015-02-28 19:41:07 UTC
seems like a regression from using gtk decorations ?
Comment 3 Jasper St. Pierre (not reading bugmail) 2015-02-28 20:11:04 UTC
Most likely a regression from https://git.gnome.org/browse/mutter/commit?id=d561b3b18f73a66bcd7947dce7ab1aab9e09965a . On my todo list.
Comment 4 Florian Müllner 2015-03-07 09:10:00 UTC
*** Bug 732017 has been marked as a duplicate of this bug. ***
Comment 5 Matthias Clasen 2015-03-10 10:39:17 UTC
Jasper, any insight on this ?
Comment 6 Jasper St. Pierre (not reading bugmail) 2015-03-10 14:30:57 UTC
Yes. I started working on it on Sunday and then got stuck. I'll see about asking Carlos for a bit of help with it. Touch events are confusing.
Comment 7 Carlos Garnacho 2015-03-12 13:28:43 UTC
Created attachment 299201 [details] [review]
core: Unset all input events on the GDK connection

With all input events being handled through clutter, this only confuses
things, and most nominally, coerces touch events through places we didn't
intend to, like the window frame.

This makes again all touch events only handled in the passive grab on X11,
while the rest stays pointer (emulated) only.
Comment 8 Carlos Garnacho 2015-03-16 15:51:10 UTC
The patch is now master (https://git.gnome.org/browse/mutter/commit/?id=d63b9a1797a0e153ca9bf54daabcdcc00e0f7233). It fixes all drag/click issues on X11 here.